--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "vtube",
-  "version": "1.0.0",
-  "description": "a general video app",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
-  },
-  "keywords": [
-    "vtube",
-    "nodejs",
-    "express"
-  ],
-  "author": "Sanket Patil",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.1.0",
-    "prettier": "^3.2.5"
-  },
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.3.1"
-  }
+    "name": "vtube",
+    "version": "1.0.0",
+    "description": "a general video app",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+    },
+    "keywords": [
+        "vtube",
+        "nodejs",
+        "express"
+    ],
+    "author": "Sanket Patil",
+    "license": "ISC",
+    "devDependencies": {
+        "nodemon": "^3.1.0",
+        "prettier": "^3.2.5"
+    },
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.3.1",
+        "mongoose-aggregate-paginate-v2": "^1.0.7"
+    }
 }
